add setup enviromet instruction file

--- a/etl_souce/transformation.ipynb
+++ b/etl_souce/transformation.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,16 +58,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2020-05-12'"
+       "'2018-05-13'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,9 +97,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning: Ignoring non-Spark config property: hive.exec.dynamic.partition.mode\n",
+      "Warning: Ignoring non-Spark config property: hive.exec.dynamic.partition\n",
+      "23/08/03 14:49:03 WARN Utils: Your hostname, bigdata-etl resolves to a loopback address: 127.0.1.1; using 192.168.85.128 instead (on interface ens33)\n",
+      "23/08/03 14:49:03 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "23/08/03 14:49:07 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "23/08/03 14:49:12 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
+     ]
+    }
+   ],
    "source": [
     "# create spark session\n",
     "spark = SparkSession \\\n",
@@ -114,9 +129,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "# load data to spark df\n",
     "orders_df = spark.read.parquet('hdfs://localhost:9000/datalake/orders').drop(\"year\", \"month\", \"day\")\n",
@@ -127,9 +150,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -154,9 +184,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 5:>                                                          (0 + 1) / 1]\r"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -188,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,59 +333,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "23/08/03 01:25:14 INFO HiveMetaStore: 0: get_table : db=reports tbl=daily_gross_revenue\n",
-      "23/08/03 01:25:14 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_table : db=reports tbl=daily_gross_revenue\t\n",
-      "23/08/03 01:25:14 INFO HiveMetaStore: 0: get_table : db=reports tbl=daily_gross_revenue\n",
-      "23/08/03 01:25:14 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_table : db=reports tbl=daily_gross_revenue\t\n",
-      "23/08/03 01:25:14 INFO HiveMetaStore: 0: get_database: reports\n",
-      "23/08/03 01:25:14 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_database: reports\t\n",
-      "23/08/03 01:25:14 INFO HiveMetaStore: 0: get_table : db=reports tbl=daily_gross_revenue\n",
-      "23/08/03 01:25:14 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_table : db=reports tbl=daily_gross_revenue\t\n",
-      "23/08/03 01:25:14 INFO HiveMetaStore: 0: get_table : db=reports tbl=daily_gross_revenue\n",
-      "23/08/03 01:25:14 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_table : db=reports tbl=daily_gross_revenue\t\n",
-      "23/08/03 01:25:15 INFO HiveMetaStore: 0: get_table : db=reports tbl=daily_gross_revenue\n",
-      "23/08/03 01:25:15 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_table : db=reports tbl=daily_gross_revenue\t\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "23/08/03 01:25:44 INFO HiveMetaStore: 0: get_table : db=reports tbl=daily_gross_revenue\n",
-      "23/08/03 01:25:44 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_table : db=reports tbl=daily_gross_revenue\t\n",
-      "23/08/03 01:25:44 INFO HiveMetaStore: 0: get_table : db=reports tbl=daily_gross_revenue\n",
-      "23/08/03 01:25:44 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_table : db=reports tbl=daily_gross_revenue\t\n",
-      "23/08/03 01:25:45 INFO HiveMetaStore: 0: get_table : db=reports tbl=daily_gross_revenue\n",
-      "23/08/03 01:25:45 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_table : db=reports tbl=daily_gross_revenue\t\n",
-      "23/08/03 01:25:45 INFO HiveMetaStore: 0: get_table : db=reports tbl=daily_gross_revenue\n",
-      "23/08/03 01:25:45 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_table : db=reports tbl=daily_gross_revenue\t\n",
-      "23/08/03 01:25:45 INFO Hive: New loading path = hdfs://localhost:9000/user/hive/warehouse/reports.db/daily_gross_revenue/.hive-staging_hive_2023-08-03_01-25-15_104_2323326712391549837-1/-ext-10000/year=2020/month=05/day=12 with partSpec {year=2020, month=05, day=12}\n",
-      "23/08/03 01:25:46 INFO HiveMetaStore: 2: get_partition_with_auth : db=reports tbl=daily_gross_revenue[2020,05,12]\n",
-      "23/08/03 01:25:46 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_partition_with_auth : db=reports tbl=daily_gross_revenue[2020,05,12]\t\n",
-      "23/08/03 01:25:46 WARN HiveConf: HiveConf of name hive.internal.ss.authz.settings.applied.marker does not exist\n",
-      "23/08/03 01:25:46 WARN HiveConf: HiveConf of name hive.stats.jdbc.timeout does not exist\n",
-      "23/08/03 01:25:46 WARN HiveConf: HiveConf of name hive.stats.retries.wait does not exist\n",
-      "23/08/03 01:25:46 INFO HiveMetaStore: 2: Opening raw store with implementation class:org.apache.hadoop.hive.metastore.ObjectStore\n",
-      "23/08/03 01:25:46 INFO ObjectStore: ObjectStore, initialize called\n",
-      "23/08/03 01:25:46 INFO MetaStoreDirectSql: Using direct SQL, underlying DB is DERBY\n",
-      "23/08/03 01:25:46 INFO ObjectStore: Initialized ObjectStore\n",
-      "23/08/03 01:25:46 INFO FileUtils: Creating directory if it doesn't exist: hdfs://localhost:9000/user/hive/warehouse/reports.db/daily_gross_revenue/year=2020/month=05/day=12\n",
-      "23/08/03 01:25:47 INFO HiveMetaStore: 2: add_partition : db=reports tbl=daily_gross_revenue\n",
-      "23/08/03 01:25:47 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=add_partition : db=reports tbl=daily_gross_revenue\t\n",
-      "23/08/03 01:25:48 INFO Hive: Loaded 1 partitions\n",
-      "23/08/03 01:25:48 INFO HiveMetaStore: 0: get_database: reports\n",
-      "23/08/03 01:25:48 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_database: reports\t\n",
-      "23/08/03 01:25:48 INFO HiveMetaStore: 0: get_table : db=reports tbl=daily_gross_revenue\n",
-      "23/08/03 01:25:48 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_table : db=reports tbl=daily_gross_revenue\t\n",
-      "23/08/03 01:25:48 INFO HiveMetaStore: 0: get_table : db=reports tbl=daily_gross_revenue\n",
-      "23/08/03 01:25:48 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_table : db=reports tbl=daily_gross_revenue\t\n"
+      "23/08/03 14:50:05 INFO HiveConf: Found configuration file file:/usr/local/spark/conf/hive-site.xml\n",
+      "23/08/03 14:50:06 WARN HiveConf: HiveConf of name hive.stats.jdbc.timeout does not exist\n",
+      "23/08/03 14:50:06 WARN HiveConf: HiveConf of name hive.stats.retries.wait does not exist\n",
+      "23/08/03 14:50:06 INFO HiveMetaStore: 0: Opening raw store with implementation class:org.apache.hadoop.hive.metastore.ObjectStore\n",
+      "23/08/03 14:50:06 INFO ObjectStore: ObjectStore, initialize called\n",
+      "23/08/03 14:50:07 INFO Persistence: Property hive.metastore.integral.jdo.pushdown unknown - will be ignored\n",
+      "23/08/03 14:50:07 INFO Persistence: Property datanucleus.cache.level2 unknown - will be ignored\n",
+      "23/08/03 14:50:14 INFO ObjectStore: Setting MetaStore object pin classes with hive.metastore.cache.pinobjtypes=\"Table,StorageDescriptor,SerDeInfo,Partition,Database,Type,FieldSchema,Order\"\n",
+      "23/08/03 14:50:20 INFO MetaStoreDirectSql: Using direct SQL, underlying DB is DERBY\n",
+      "23/08/03 14:50:20 INFO ObjectStore: Initialized ObjectStore\n",
+      "23/08/03 14:50:21 WARN ObjectStore: Version information not found in metastore. hive.metastore.schema.verification is not enabled so recording the schema version 2.3.0\n",
+      "23/08/03 14:50:21 WARN ObjectStore: setMetaStoreSchemaVersion called but recording version is disabled: version = 2.3.0, comment = Set by MetaStore hadoop@127.0.1.1\n",
+      "23/08/03 14:50:21 INFO HiveMetaStore: Added admin role in metastore\n",
+      "23/08/03 14:50:21 INFO HiveMetaStore: Added public role in metastore\n",
+      "23/08/03 14:50:21 INFO HiveMetaStore: No user is added in admin role, since config is empty\n",
+      "23/08/03 14:50:21 INFO HiveMetaStore: 0: get_database: default\n",
+      "23/08/03 14:50:21 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_database: default\t\n",
+      "23/08/03 14:50:21 INFO HiveMetaStore: 0: get_table : db=reports tbl=daily_gross_revenue\n",
+      "23/08/03 14:50:21 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_table : db=reports tbl=daily_gross_revenue\t\n",
+      "23/08/03 14:50:22 INFO HiveMetaStore: 0: get_table : db=reports tbl=daily_gross_revenue\n",
+      "23/08/03 14:50:22 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_table : db=reports tbl=daily_gross_revenue\t\n",
+      "23/08/03 14:50:22 INFO HiveMetaStore: 0: get_database: reports\n",
+      "23/08/03 14:50:22 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_database: reports\t\n",
+      "23/08/03 14:50:22 INFO HiveMetaStore: 0: get_table : db=reports tbl=daily_gross_revenue\n",
+      "23/08/03 14:50:22 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_table : db=reports tbl=daily_gross_revenue\t\n",
+      "23/08/03 14:50:22 INFO HiveMetaStore: 0: get_table : db=reports tbl=daily_gross_revenue\n",
+      "23/08/03 14:50:22 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_table : db=reports tbl=daily_gross_revenue\t\n",
+      "23/08/03 14:50:23 INFO HiveMetaStore: 0: get_table : db=reports tbl=daily_gross_revenue\n",
+      "23/08/03 14:50:23 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_table : db=reports tbl=daily_gross_revenue\t\n",
+      "23/08/03 14:50:52 INFO HiveMetaStore: 0: get_table : db=reports tbl=daily_gross_revenue\n",
+      "23/08/03 14:50:52 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_table : db=reports tbl=daily_gross_revenue\t\n",
+      "23/08/03 14:50:52 INFO HiveMetaStore: 0: get_table : db=reports tbl=daily_gross_revenue\n",
+      "23/08/03 14:50:52 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_table : db=reports tbl=daily_gross_revenue\t\n",
+      "23/08/03 14:50:53 INFO HiveMetaStore: 0: get_table : db=reports tbl=daily_gross_revenue\n",
+      "23/08/03 14:50:53 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_table : db=reports tbl=daily_gross_revenue\t\n",
+      "23/08/03 14:50:53 INFO HiveMetaStore: 0: get_table : db=reports tbl=daily_gross_revenue\n",
+      "23/08/03 14:50:53 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_table : db=reports tbl=daily_gross_revenue\t\n",
+      "23/08/03 14:50:53 INFO Hive: New loading path = hdfs://localhost:9000/user/hive/warehouse/reports.db/daily_gross_revenue/.hive-staging_hive_2023-08-03_14-50-23_321_6542270454194797700-1/-ext-10000/year=2018/month=05/day=13 with partSpec {year=2018, month=05, day=13}\n",
+      "23/08/03 14:50:53 INFO SQLStdHiveAccessController: Created SQLStdHiveAccessController for session context : HiveAuthzSessionContext [sessionString=f6f68f56-e7c6-42b2-b755-4358227061e4, clientType=HIVECLI]\n",
+      "23/08/03 14:50:53 WARN SessionState: METASTORE_FILTER_HOOK will be ignored, since hive.security.authorization.manager is set to instance of HiveAuthorizerFactory.\n",
+      "23/08/03 14:50:53 INFO HiveMetaStore: 1: get_partition_with_auth : db=reports tbl=daily_gross_revenue[2018,05,13]\n",
+      "23/08/03 14:50:53 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_partition_with_auth : db=reports tbl=daily_gross_revenue[2018,05,13]\t\n",
+      "23/08/03 14:50:53 WARN HiveConf: HiveConf of name hive.stats.jdbc.timeout does not exist\n",
+      "23/08/03 14:50:53 WARN HiveConf: HiveConf of name hive.stats.retries.wait does not exist\n",
+      "23/08/03 14:50:53 INFO HiveMetaStore: 1: Opening raw store with implementation class:org.apache.hadoop.hive.metastore.ObjectStore\n",
+      "23/08/03 14:50:53 INFO ObjectStore: ObjectStore, initialize called\n",
+      "23/08/03 14:50:53 INFO MetaStoreDirectSql: Using direct SQL, underlying DB is DERBY\n",
+      "23/08/03 14:50:53 INFO ObjectStore: Initialized ObjectStore\n",
+      "23/08/03 14:50:54 INFO FileUtils: Creating directory if it doesn't exist: hdfs://localhost:9000/user/hive/warehouse/reports.db/daily_gross_revenue/year=2018/month=05/day=13\n",
+      "23/08/03 14:50:56 INFO HiveMetaStore: 1: add_partition : db=reports tbl=daily_gross_revenue\n",
+      "23/08/03 14:50:56 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=add_partition : db=reports tbl=daily_gross_revenue\t\n",
+      "23/08/03 14:50:57 INFO Hive: Loaded 1 partitions\n",
+      "23/08/03 14:50:58 INFO metastore: Mestastore configuration hive.metastore.filter.hook changed from org.apache.hadoop.hive.metastore.DefaultMetaStoreFilterHookImpl to org.apache.hadoop.hive.ql.security.authorization.plugin.AuthorizationMetaStoreFilterHook\n",
+      "23/08/03 14:50:58 INFO HiveMetaStore: 0: Cleaning up thread local RawStore...\n",
+      "23/08/03 14:50:58 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=Cleaning up thread local RawStore...\t\n",
+      "23/08/03 14:50:58 INFO HiveMetaStore: 0: Done cleaning up thread local RawStore\n",
+      "23/08/03 14:50:58 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=Done cleaning up thread local RawStore\t\n",
+      "23/08/03 14:50:58 INFO HiveMetaStore: 0: get_database: reports\n",
+      "23/08/03 14:50:58 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_database: reports\t\n",
+      "23/08/03 14:50:58 WARN HiveConf: HiveConf of name hive.internal.ss.authz.settings.applied.marker does not exist\n",
+      "23/08/03 14:50:58 WARN HiveConf: HiveConf of name hive.stats.jdbc.timeout does not exist\n",
+      "23/08/03 14:50:58 WARN HiveConf: HiveConf of name hive.stats.retries.wait does not exist\n",
+      "23/08/03 14:50:58 INFO HiveMetaStore: 0: Opening raw store with implementation class:org.apache.hadoop.hive.metastore.ObjectStore\n",
+      "23/08/03 14:50:58 INFO ObjectStore: ObjectStore, initialize called\n",
+      "23/08/03 14:50:58 INFO MetaStoreDirectSql: Using direct SQL, underlying DB is DERBY\n",
+      "23/08/03 14:50:58 INFO ObjectStore: Initialized ObjectStore\n",
+      "23/08/03 14:50:58 INFO HiveMetaStore: 0: get_table : db=reports tbl=daily_gross_revenue\n",
+      "23/08/03 14:50:58 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_table : db=reports tbl=daily_gross_revenue\t\n",
+      "23/08/03 14:50:58 INFO HiveMetaStore: 0: get_table : db=reports tbl=daily_gross_revenue\n",
+      "23/08/03 14:50:58 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_table : db=reports tbl=daily_gross_revenue\t\n",
+      "23/08/03 14:50:58 INFO HiveMetaStore: 0: get_database: global_temp\n",
+      "23/08/03 14:50:58 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_database: global_temp\t\n",
+      "23/08/03 14:50:58 WARN ObjectStore: Failed to get database global_temp, returning NoSuchObjectException\n"
      ]
     }
    ],
